mutants.out/log/src__proto__single__mod.rs_line_245_col_9.log

*** src/proto/single/mod.rs:245:9: replace Job::id -> &JobId with &Default::default()

*** mutation diff:
--- src/proto/single/mod.rs
+++ replace Job::id -> &JobId with &Default::default()
@@ -237,17 +237,17 @@
     /// "default".
     pub fn on_queue<S: Into<String>>(mut self, queue: S) -> Self {
         self.queue = queue.into();
         self
     }
 
     /// This job's id.
     pub fn id(&self) -> &JobId {
-        &self.jid
+        &Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     /// This job's type.
     pub fn kind(&self) -> &str {
         &self.kind
     }
 
     /// The arguments provided for this job.


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0515]: cannot return reference to temporary value
   --> src/proto/single/mod.rs:245:9
    |
245 |         &Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^------------------
    |         ||
    |         |temporary value created here
    |         returns a reference to data owned by the current function

For more information about this error, try `rustc --explain E0515`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
